--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;600;700;800&display=swap');
 
 body {
+  box-sizing: border-box;
+  padding: 0;
   margin: 0;
   font-family: 'Cairo';
   -webkit-font-smoothing: 'Cairo';
